<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <include layout="@layout/toolbar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="elsuper.david.com.practica2.InsertActivity">

        <LinearLayout
            android:layout_weight=".4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/insert_etAppName"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_hintAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:id="@+id/insert_etDeveloperName"
                android:hint="@string/insert_hintDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:maxLines="4"
                android:layout_marginTop="16dp"
                android:id="@+id/insert_etDetail"
                android:hint="@string/insert_hintDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:layout_marginTop="16dp"
                android:text="@string/adapter_messageStatus0"
                android:id="@+id/insert_cbUpdated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight=".6"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/insert_btnSave"
                android:id="@+id/insert_btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>