<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorStatus"
        android:textStyle="bold"
        android:text="@string/menu_detail_msgShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_weight=".4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/fragdetail_ivImage"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/fragdetail_tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="14sp"
                android:layout_weight="1"
                android:id="@+id/fragdetail_tvDeveloperName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight=".3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:gravity="top"
            android:maxLines="10"
            android:textSize="14sp"
            android:id="@+id/fragdetail_tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/fragdetail_pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight=".3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:visibility="gone"
            android:id="@+id/fragdetail_tvUninstalled"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorStatus"
            android:textStyle="bold"
            android:text="@string/serviceuninstall_postContentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragdetail_btnUninstall"
            android:layout_weight="1"
            android:text="@string/fragdetail_btnUninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragdetail_btnOpen"
            android:layout_weight="1"
            android:text="@string/fragdetail_btnOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragdetail_btnUpdate"
            android:layout_weight="1"
            android:text="@string/fragdetail_btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>